fix for button bleeds in firefox

--- a/editor/temp.css
+++ b/editor/temp.css
@@ -1217,8 +1217,8 @@ html, body {
 	border: solid #2f2f2c 2px;
 	top: -1px;
 	left: -1px;
-	width: 28px;
-	height: 28px;
+	width: 26px;
+	height: 26px;
 	z-index: 0;
 }
 
